Reduce boilerplate gets